Fixing jumpy-height map section
Just adding a min-height on the map-wrapper to accommodate the total
height when text is displayed.

--- a/static/css/orgullopr.css
+++ b/static/css/orgullopr.css
@@ -123,6 +123,7 @@ ul.footer-links li:hover{
 }
 .map-wrapper {
     background-color: rgba(72,91,210,1);
+    min-height: 550px;
 }
 .text-wrapper {
     background-color: rgba(247,247,247,1);
